--- a/first_image_clasif_tf_docu.ipynb
+++ b/first_image_clasif_tf_docu.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "first_image_clasif_tf_docu",
       "provenance": [],
-      "authorship_tag": "ABX9TyPkPrskvK8yqD+M12+RP2jC",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMyp2PyEh5Vwo/B1CsEdMk3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "My first Neural Net are some notes about the post in tensorflow page,the best way to lear is involve in with the ideas."
+        "My first Neural Net are some notes about the post in tensorflow page,the best way to learn is involve yourself  with the ideas."
       ]
     },
     {
